# aptos-forge

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  install-skill.sh  install.sh  main.go
.claude/skills/aptos/: SKILL.md
.github/workflows/: release-plugins.yaml  release.yaml
cmd/: root.go
cmd/account/: account.go  balance.go  module.go  modules.go  resource.go  resources.go  sends.go  source_code.go  transfers.go  txs.go
cmd/block/: block.go  by_version.go
cmd/events/: events.go
cmd/ledger/: ledger.go
cmd/node/: health.go  info.go  ledger.go  spec.go
cmd/table/: table.go
cmd/tx/: balance_change.go  encode.go  graph.go  helpers.go  list.go  simulate.go  submit.go  trace.go  transfers.go  tx.go  view.go
cmd/view/: view.go
crates/aptly-cli/: Cargo.toml  build.rs
crates/aptly-cli/src/: main.rs  plugin_tools.rs
crates/aptly-cli/src/commands/: account.rs  address.rs  block.rs  common.rs  decompile.rs  events.rs  mod.rs  node.rs  plugin.rs  table.rs  tx.rs  view.rs
crates/aptly-plugin/src/: lib.rs
crates/aptos-script-compose/: Cargo.toml
crates/aptos-script-compose/src/: main.rs
docs/: rust-migration-plan.md
pkg/api/: api.go
