[workspace]
members = [
    "crates/aptly-aptos",
    "crates/aptly-cli",
    "crates/aptly-plugin",
    "crates/aptos-script-compose",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"

[workspace.metadata.release]
tag-name = "v{{version}}"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
hex = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
urlencoding = "2.1"
